--- a/views/skills/new.ejs
+++ b/views/skills/new.ejs
@@ -8,11 +8,9 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
-    <h3><%= skill.skill %></h3>
-    <h3>Skill Status: <%= skill.learned ? 'learned' : 'not learned' %></h3>
-    <form action="/skills/<%= skill.id %>?_method=DELETE"
-        class="delete-form" method="POST">
-        <button type="submit">Delete Skill</button>
-</body>
-  
-</html>
+    <h1>New Todo</h1>
+    <form action="/skills" method="POST" autocomplete="off">
+      <input type="text" name="skill">
+      <button type="submit">Save Skill</button>
+    </form>
+  </body>
